Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
      - name: laravel
        image: docker-php-sample-server:latest
        imagePullPolicy: Never  # <--- PENTING: Supaya K8s ambil dari local Minikube, bukan internet
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  selector:
    app: laravel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort # Supaya bisa diakses dari browser laptop
