Kubernetes/mysql-stack.yaml
# 2. Bikin Network (Service) biar bisa dipanggil Laravel
apiVersion: v1
kind: Service
metadata:
  name: mysql-service # <--- INGAT NAMA INI
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
---
# 3. Bikin Server MySQL-nya
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql # <--- Titik mount data MySQL
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim # <--- Sambung ke Hard Disk di atas
